<resources>
    <string name="app_name">03aug</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="country_code">Country code</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="last_name2">Last Name</string>
    <string name="first_name1">First Name</string>
    <string name="click_here">click here</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>