<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fifth">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstName"
        app:boxBackgroundColor="#ffffff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:hint="@string/first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
     >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        app:boxBackgroundColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/firstName"
        app:layout_constraintStart_toStartOf="@+id/firstName"
      app:layout_constraintTop_toBottomOf="@id/firstName"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:boxBackgroundColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lastName"
        app:layout_constraintTop_toBottomOf="@id/lastName"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:hint="@string/address"

        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:lines="4"
            android:maxLines="4">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/countryCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/country_code"
        app:boxBackgroundColor="#ffffff"
        app:layout_constraintStart_toStartOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/address"
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent="0.35">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCountrycode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="3">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobile"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.61"
        android:layout_height="wrap_content"
        android:hint="@string/mobile"
        app:boxBackgroundColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/address"
        app:layout_constraintStart_toEndOf="@+id/countryCode"
        app:layout_constraintTop_toTopOf="@+id/countryCode"
        app:layout_constraintBottom_toBottomOf="@+id/countryCode"
        android:layout_marginStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="10">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/countryCode"
        app:layout_constraintEnd_toEndOf="@+id/mobile"
        app:layout_constraintTop_toBottomOf="@+id/countryCode"
        android:hint="@string/password"
        app:boxBackgroundColor="#ffffff"
        android:layout_marginTop="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editPass">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/conPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:hint="@string/confirm_password"
        app:boxBackgroundColor="#ffffff"
        android:layout_marginTop="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editConPass">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/nextPage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/conPassword"
        app:layout_constraintStart_toStartOf="@+id/conPassword"
        app:layout_constraintTop_toBottomOf="@+id/conPassword"
        android:textAllCaps="false"
        android:text="@string/sign_up" />




</androidx.constraintlayout.widget.ConstraintLayout>
