<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".third">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"
            android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_alignTop="@+id/image"
                android:layout_alignParentEnd="true"
                app:boxBackgroundColor="#ffffff"
                android:layout_toEndOf="@+id/image"
                android:hint="@string/first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_below="@+id/fName"
                android:layout_marginTop="8dp"
                app:boxBackgroundColor="#ffffff"
                android:layout_toEndOf="@+id/image"
                android:layout_alignParentEnd="true"
                android:hint="@string/last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/image"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            app:boxBackgroundColor="#ffffff"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/email"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"

            android:layout_marginTop="16dp"
            app:boxBackgroundColor="#ffffff"
            android:hint="@string/address"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:lines="4"
                android:maxLines="4">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/countryCode"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/address"
            android:hint="@string/country_code"
            app:boxBackgroundColor="#ffffff">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="140dp"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/countryCode"
            android:id="@+id/mobile"
            android:layout_toEndOf="@+id/countryCode"
            app:boxBackgroundColor="#ffffff"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:hint="@string/mobile"
            app:hintEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            app:boxBackgroundColor="#ffffff"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/countryCode"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebPassword">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/conPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            app:boxBackgroundColor="#ffffff"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/password"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebPassword">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/nextPage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/conPassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:text="@string/sign_up" />






    </RelativeLayout>
</ScrollView>